--- a/index.html
+++ b/index.html
@@ -6,8 +6,25 @@
     <title>Quiz</title>
 </head>
 <body>
-    <button> Option A </button>
-    <button> Option B </button>
-    <button> Option C </button>
+    <h1>Quiz</h1>
+    <h2> How should you NOT refer to Javascript?</h2>
+    <button onclick="check(this)"> JS </button>
+    <button onclick="check(this)"> VanillaJS </button>
+    <button onclick="check(this)" class="correct"> Java</button>
+
+    <h2>What does the C in CSS Stand for?</h2>
+    <button onclick="check(this)"> Cascading </button>
+    <button onclick="check(this)"> Cat </button>
+    <button onclick="check(this)" class="correct"> Compounding </button>
+
+    <script>
+        function check(button){
+            if (button.classList.contains("correct")){
+                button.style.background= "green";
+            } else {
+                button.style.background ="red";
+            }
+        }
+    </script>
 </body>
 </html>
